# mantra-rs

./: .gitignore  Cargo.toml  README.md
rag_examples/: 01_extract_method.md
rag_examples/example_app/: Cargo.toml
rag_examples/example_app/src/: main.rs
src/: config.rs  exec.rs  io_utils.rs  main.rs  prompts.rs  rag.rs  verification.rs
src/agents/: developer.rs  repair.rs  reviewer.rs
