[package]
name = "mantra-rs"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["You <you@example.com>"]
description = "Multi-agent refactoring CLI for Rust: Developer, Reviewer, Repair agents (MANTRA-style)."

[dependencies]
anyhow = "1.0"
thiserror = "1.0"
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.38", features = ["macros", "rt-multi-thread", "process", "fs"] }
reqwest = { version = "0.12", features = ["json", "gzip", "stream", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
time = { version = "0.3", features = ["macros", "formatting"] }
tempfile = "3.10"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter", "ansi"] }
which = "6.0"
regex = "1.11"
async-openai = "0.27"

[dev-dependencies]
pretty_assertions = "1.4"

[profile.release]
lto = "thin"
codegen-units = 1
